# Carla-End-to-End

./: .gitignore  .gitmodules  FAQ.md  README.md  common_commands.txt  docker-compose.override.yml  docker-compose.yml  environment.yml  instructions.md  nginx.conf  pyproject.toml
Carla/: Dockerfile
CarlaControl/: README.md  carla_connect_check.py  follow_hero.py  lane_follow.py  lane_follow_config.yaml  lidar_capture.py  lidar_capture_config.yaml  lidar_to_map.py  lidar_to_map_config.yaml  log_utils.py  record_robotaxi.py  record_sensors.py  spawn_custom_npc.py  spawn_healthcheck.py  spawn_hero_sensors.py  spawn_scene.py  spawn_sensor_rig.py  spawn_traffic.py
CarlaControl/configs/: current_setup.yaml  safe_setup.yaml
WebUI/: README.md  app.js  config.js  configs.html  controls.html  controls.js  index.html  models.html  server.py  styles.css  training.html  training.js  yaml_index.json
backend/: Dockerfile  README.md  carla_actions.py  main.py  pyproject.toml  requirements.txt  storage_index_cli.py
generalml/: __init__.py
model_middleware/: __init__.py  panoptic_to_laneatt.py
scripts/: train_partial_bev.py  tune_partial_bev.py  tune_partial_bev_optuna.py
tools/carla_nlp/: carla_repos_p1_p6.txt  clone_carla_repos.ps1  fetch_carla_files.ps1  find_carla_scripts.ps1  make_aug_prompts.py  process_local_carla.ps1  scan_local_carla_scripts.ps1
utils/: eval_camera_steer.py  llm_to_speech.py  prepare_recordings_camera_only.py  prepare_robotaxi_full.py  storage_index_builder.py  stt_to_llm.py  tinyllama_chat.py
whisper_api/: Dockerfile  app.py  pyproject.toml  requirements.txt
