[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-api"
version = "0.1.0"
description = "Minimal FastAPI wrapper around whispercpp"
requires-python = ">=3.10,<3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "whispercpp",
  "python-multipart",
]

[tool.hatch.build.targets.wheel]
packages = ["whisper_api"]

[tool.hatch.build.targets.sdist]
include = ["whisper_api"]
